--- a/src/content/docs/Intro/index.mdx
+++ b/src/content/docs/Intro/index.mdx
@@ -1,5 +1,5 @@
 ---
-title: Components
+title: Introduction
 ---
 import Callout from "@/components/Callout.astro";
 import Card from '@/components/Card.astro';
