--- a/src/content/docs/Intro/installation.mdx
+++ b/src/content/docs/Intro/installation.mdx
@@ -1,5 +1,5 @@
 ---
-title: Callout
+title: Installation
 ---
 import Callout from "@/components/Callout.astro";
 import { Cat } from 'lucide-react';
