readme, fixed favicon and docs draft

--- a/src/content/docs/Docs/device.mdx
+++ b/src/content/docs/Docs/device.mdx
@@ -1,3 +1,12 @@
 ---
 title: Device Module
 ---
+
+The module is responsible for conecting Brain-Computer Interface with the framework and passing data to next layers.
+
+To configure Device Module You have to instantiate 2 scriptable objects: 
+- DeviceConfig 
+- DeviceManager
+
+Then use them within the BNMManager scriptable object.
+
