--- a/src/content/docs/Docs/index.mdx
+++ b/src/content/docs/Docs/index.mdx
@@ -1,3 +1,12 @@
 ---
 title: Documentation
 ---
+
+BoreNoMore framework consists of Layers through which data flows via Events databus.
+
+
+## Available layers:
+- [Device Module](/BoreNoMore/docs/device)
+- [Preprocessing Module](/BoreNoMore/docs/preprocessing)
+- [Classifier Module](/BoreNoMore/docs/classifier)
+- [Game Integration Module](/BoreNoMore/docs/game-integration)
